--- a/index.html
+++ b/index.html
@@ -2,11 +2,63 @@
 <html>
 <head>
 	<title>PROJECT CSS</title>
+	<meta charset="utf-8">
+  	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
+	<link rel="stylesheet" type="text/css" href="./css/responsive.css">
 	<script src="https://kit.fontawesome.com/c0363bf846.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 </head>
 <body>
-	
+	<header></header>
+	<main>
+		<section class="slider-main">
+			<!-- Slideshow container -->
+			<div class="container">
+			  	<div id="myCarousel" class="carousel slide" data-ride="carousel">
+				    <!-- Indicators -->
+				    <div class="slide-thumbnail">
+				    	<ul>
+				    		<li data-target="#myCarousel" data-slide-to="0" class="active">
+				    			<div class="thumbnail-link">
+						      		<img src="./images/5106e4259047de14e0d50ff01891dfe7.jpg">
+						      	</div>
+				    		</li>
+				    		<li data-target="#myCarousel" data-slide-to="1"> 
+				    			<div class="thumbnail-link">
+						      		<img src="./images/fc329ba9455f7e596aa24e798134bf18.jpg">
+						      	</div>
+				    		</li>
+				    		<li data-target="#myCarousel" data-slide-to="2"> 
+				    			<div class="thumbnail-link">
+						      		<img src="./images/1a3bd2b3c8e7669fb90d0ccd1a5def1c.jpg">
+						      	</div>
+				    		</li>
+				    	</ul>
+				    </div>
+
+				    <!-- Wrapper for slides -->
+				    <div class="carousel-inner">
+				      	<div class="item active">
+					        <img src="./images/ddf47267be698e3e0325d142572f21f2.jpg" alt="album" style="width:100%;">
+				      	</div>
+
+				      	<div class="item">
+					        <img src="./images/a543115d5da6e5155940ec79fdc9e40f.jpg" alt="album" style="width:100%;">
+				      	</div>
+				    
+				      	<div class="item">
+					        <img src="./images/08d7fdca2079ecd6226810f60a513f85.jpg" alt="album" style="width:100%;">				      
+				      	</div>
+				    </div>
+			  	</div>
+			</div>
+		</section>
+		
+	</main>
+	<footer></footer>
 </body>
 </html>
