Edit homepage, slide and recently-listen

--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
 	<link rel="stylesheet" type="text/css" href="./css/responsive.css">
 	<script src="https://kit.fontawesome.com/c0363bf846.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css">
+
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+  	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.js"></script>
 
 </head>
 <body>
@@ -57,8 +63,236 @@
 			  	</div>
 			</div>
 		</section>
-		
+		<section class="recently-listen">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<div class="title-music"><a href="#">Hạnh phúc đơn giản</a></div>
+						<div class="album-slider">
+							<div class="slick-wrapper">
+  								<div class="slick">
+  									<div class="slide-item">
+  										<div class="col-album">
+											<a href="#">
+												<div class="card-image">
+													<div class="image">
+														<img src="./images/248057f542641f7e06f22c0e61c534a4.jpg" alt="album" />
+													</div>
+													<div class="overlay"></div>
+													<div class="play-actions">
+														<ul>
+															<li><i class="far fa-heart"></i></li>
+															<li><i class="far fa-play-circle"></i></li>
+															<li><i class="fas fa-ellipsis-h"></i></li>
+														</ul>
+													</div>
+												</div>
+											</a>
+											<div class="card-info">
+												<div class="title">
+													<a href="#">Các ca khúc pop ballad Việt nổi bật 2020</a>
+												</div>
+												<div class="artist"></div>
+											</div>
+										</div>
+  									</div>
+  									<div class="slide-item">
+  										<div class="col-album">
+											<a href="#">
+												<div class="card-image">
+													<div class="image">
+														<img src="./images/dbf2a8721739fcf0fd9f79de80606609.jpg" alt="album" />
+													</div>
+													<div class="overlay"></div>
+													<div class="play-actions">
+														<ul>
+															<li><i class="far fa-heart"></i></li>
+															<li><i class="far fa-play-circle"></i></li>
+															<li><i class="fas fa-ellipsis-h"></i></li>
+														</ul>
+													</div>
+												</div>
+											</a>
+											<div class="card-info">
+												<div class="title">
+													<a href="#">Các ca khúc pop ballad Việt nổi bật 2020</a>
+												</div>
+												<div class="artist"></div>
+											</div>
+										</div>
+  									</div>
+  									<div class="slide-item">
+  										<div class="col-album">
+											<a href="#">
+												<div class="card-image">
+													<div class="image">
+														<img src="./images/d2641c5296a98477733634c54b6f6e3c.jpg" alt="album" />
+													</div>
+													<div class="overlay"></div>
+													<div class="play-actions">
+														<ul>
+															<li><i class="far fa-heart"></i></li>
+															<li><i class="far fa-play-circle"></i></li>
+															<li><i class="fas fa-ellipsis-h"></i></li>
+														</ul>
+													</div>
+												</div>
+											</a>
+											<div class="card-info">
+												<div class="title">
+													<a href="#">Các ca khúc pop ballad Việt nổi bật 2020</a>
+												</div>
+												<div class="artist"></div>
+											</div>
+										</div>
+  									</div>
+  									<div class="slide-item">
+  										<div class="col-album">
+											<a href="#">
+												<div class="card-image">
+													<div class="image">
+														<img src="./images/248057f542641f7e06f22c0e61c534a4.jpg" alt="album" />
+													</div>
+													<div class="overlay"></div>
+													<div class="play-actions">
+														<ul>
+															<li><i class="far fa-heart"></i></li>
+															<li><i class="far fa-play-circle"></i></li>
+															<li><i class="fas fa-ellipsis-h"></i></li>
+														</ul>
+													</div>
+												</div>
+											</a>
+											<div class="card-info">
+												<div class="title">
+													<a href="#">Các ca khúc pop ballad Việt nổi bật 2020</a>
+												</div>
+												<div class="artist"></div>
+											</div>
+										</div>
+  									</div>
+  									<div class="slide-item">
+  										<div class="col-album">
+											<a href="#">
+												<div class="card-image">
+													<div class="image">
+														<img src="./images/3f243488297453c2d0abae307ee6b92a.jpg" alt="album" />
+													</div>
+													<div class="overlay"></div>
+													<div class="play-actions">
+														<ul>
+															<li><i class="far fa-heart"></i></li>
+															<li><i class="far fa-play-circle"></i></li>
+															<li><i class="fas fa-ellipsis-h"></i></li>
+														</ul>
+													</div>
+												</div>
+											</a>
+											<div class="card-info">
+												<div class="title">
+													<a href="#">Các ca khúc pop ballad Việt nổi bật 2020</a>
+												</div>
+												<div class="artist"></div>
+											</div>
+										</div>
+  									</div>
+  									<div class="slide-item">
+  										<div class="col-album">
+											<a href="#">
+												<div class="card-image">
+													<div class="image">
+														<img src="./images/248057f542641f7e06f22c0e61c534a4.jpg" alt="album" />
+													</div>
+													<div class="overlay"></div>
+													<div class="play-actions">
+														<ul>
+															<li><i class="far fa-heart"></i></li>
+															<li><i class="far fa-play-circle"></i></li>
+															<li><i class="fas fa-ellipsis-h"></i></li>
+														</ul>
+													</div>
+												</div>
+											</a>
+											<div class="card-info">
+												<div class="title">
+													<a href="#">Các ca khúc pop ballad Việt nổi bật 2020</a>
+												</div>
+												<div class="artist"></div>
+											</div>
+										</div>
+  									</div>
+  									<div class="slide-item">
+  										<div class="col-album">
+											<a href="#">
+												<div class="card-image">
+													<div class="image">
+														<img src="./images/2ae04674e6ff4477d8d40ff06de6d8bf.jpg" alt="album" />
+													</div>
+													<div class="overlay"></div>
+													<div class="play-actions">
+														<ul>
+															<li><i class="far fa-heart"></i></li>
+															<li><i class="far fa-play-circle"></i></li>
+															<li><i class="fas fa-ellipsis-h"></i></li>
+														</ul>
+													</div>
+												</div>
+											</a>
+											<div class="card-info">
+												<div class="title">
+													<a href="#">Các ca khúc pop ballad Việt nổi bật 2020</a>
+												</div>
+												<div class="artist"></div>
+											</div>
+										</div>
+  									</div>
+  									<div class="slide-item">
+  										<div class="col-album">
+											<a href="#">
+												<div class="card-image">
+													<div class="image">
+														<img src="./images/248057f542641f7e06f22c0e61c534a4.jpg" alt="album" />
+													</div>
+													<div class="overlay"></div>
+													<div class="play-actions">
+														<ul>
+															<li><i class="far fa-heart"></i></li>
+															<li><i class="far fa-play-circle"></i></li>
+															<li><i class="fas fa-ellipsis-h"></i></li>
+														</ul>
+													</div>
+												</div>
+											</a>
+											<div class="card-info">
+												<div class="title">
+													<a href="#">Các ca khúc pop ballad Việt nổi bật 2020</a>
+												</div>
+												<div class="artist"></div>
+											</div>
+										</div>
+  									</div>											
+  								</div>
+  							</div>		
+						</div>					
+					</div>
+				</div>
+			</div>			
+		</section>
 	</main>
 	<footer></footer>
+	<script type="text/javascript">
+		$('.slick').slick({
+			rows: 1,
+			dots: false,
+			arrows: true,
+			infinite: false,
+			speed: 300,
+			autoplaySpeed: 6000,
+			slidesToShow: 5,
+			slidesToScroll: 5,
+			nextArrow: '<a class="slidersel-control-next" style="display: block;"><i class="fas fa-angle-right"></i></a>',
+		  	prevArrow: '<a class="slidersel-control-prev" style="display: block;"><i class="fas fa-angle-left"></i></a>',
+		});
+	</script>
 </body>
 </html>
