Edit homepage, add weeky chart and artist

--- a/index.html
+++ b/index.html
@@ -278,6 +278,528 @@
 				</div>
 			</div>			
 		</section>
+		<section class="recently-listen">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<div class="title-music"><a href="#">Người Tạo Hit</a></div>
+						<div class="album-slider">
+							<div class="slick-wrapper">
+  								<div class="slick">
+  									<div class="slide-item">
+  										<div class="col-album">
+											<a href="#">
+												<div class="card-image">
+													<div class="image">
+														<img src="./images/248057f542641f7e06f22c0e61c534a4.jpg" alt="album" />
+													</div>
+													<div class="overlay"></div>
+													<div class="play-actions">
+														<ul>
+															<li><i class="far fa-heart"></i></li>
+															<li><i class="far fa-play-circle"></i></li>
+															<li><i class="fas fa-ellipsis-h"></i></li>
+														</ul>
+													</div>
+												</div>
+											</a>
+											<div class="card-info">
+												<div class="title">
+													<a href="#">Các ca khúc pop ballad Việt nổi bật 2020</a>
+												</div>
+												<div class="artist"></div>
+											</div>
+										</div>
+  									</div>
+  									<div class="slide-item">
+  										<div class="col-album">
+											<a href="#">
+												<div class="card-image">
+													<div class="image">
+														<img src="./images/dbf2a8721739fcf0fd9f79de80606609.jpg" alt="album" />
+													</div>
+													<div class="overlay"></div>
+													<div class="play-actions">
+														<ul>
+															<li><i class="far fa-heart"></i></li>
+															<li><i class="far fa-play-circle"></i></li>
+															<li><i class="fas fa-ellipsis-h"></i></li>
+														</ul>
+													</div>
+												</div>
+											</a>
+											<div class="card-info">
+												<div class="title">
+													<a href="#">Các ca khúc pop ballad Việt nổi bật 2020</a>
+												</div>
+												<div class="artist"></div>
+											</div>
+										</div>
+  									</div>
+  									<div class="slide-item">
+  										<div class="col-album">
+											<a href="#">
+												<div class="card-image">
+													<div class="image">
+														<img src="./images/d2641c5296a98477733634c54b6f6e3c.jpg" alt="album" />
+													</div>
+													<div class="overlay"></div>
+													<div class="play-actions">
+														<ul>
+															<li><i class="far fa-heart"></i></li>
+															<li><i class="far fa-play-circle"></i></li>
+															<li><i class="fas fa-ellipsis-h"></i></li>
+														</ul>
+													</div>
+												</div>
+											</a>
+											<div class="card-info">
+												<div class="title">
+													<a href="#">Các ca khúc pop ballad Việt nổi bật 2020</a>
+												</div>
+												<div class="artist"></div>
+											</div>
+										</div>
+  									</div>
+  									<div class="slide-item">
+  										<div class="col-album">
+											<a href="#">
+												<div class="card-image">
+													<div class="image">
+														<img src="./images/248057f542641f7e06f22c0e61c534a4.jpg" alt="album" />
+													</div>
+													<div class="overlay"></div>
+													<div class="play-actions">
+														<ul>
+															<li><i class="far fa-heart"></i></li>
+															<li><i class="far fa-play-circle"></i></li>
+															<li><i class="fas fa-ellipsis-h"></i></li>
+														</ul>
+													</div>
+												</div>
+											</a>
+											<div class="card-info">
+												<div class="title">
+													<a href="#">Các ca khúc pop ballad Việt nổi bật 2020</a>
+												</div>
+												<div class="artist"></div>
+											</div>
+										</div>
+  									</div>
+  									<div class="slide-item">
+  										<div class="col-album">
+											<a href="#">
+												<div class="card-image">
+													<div class="image">
+														<img src="./images/3f243488297453c2d0abae307ee6b92a.jpg" alt="album" />
+													</div>
+													<div class="overlay"></div>
+													<div class="play-actions">
+														<ul>
+															<li><i class="far fa-heart"></i></li>
+															<li><i class="far fa-play-circle"></i></li>
+															<li><i class="fas fa-ellipsis-h"></i></li>
+														</ul>
+													</div>
+												</div>
+											</a>
+											<div class="card-info">
+												<div class="title">
+													<a href="#">Các ca khúc pop ballad Việt nổi bật 2020</a>
+												</div>
+												<div class="artist"></div>
+											</div>
+										</div>
+  									</div>
+  									<div class="slide-item">
+  										<div class="col-album">
+											<a href="#">
+												<div class="card-image">
+													<div class="image">
+														<img src="./images/248057f542641f7e06f22c0e61c534a4.jpg" alt="album" />
+													</div>
+													<div class="overlay"></div>
+													<div class="play-actions">
+														<ul>
+															<li><i class="far fa-heart"></i></li>
+															<li><i class="far fa-play-circle"></i></li>
+															<li><i class="fas fa-ellipsis-h"></i></li>
+														</ul>
+													</div>
+												</div>
+											</a>
+											<div class="card-info">
+												<div class="title">
+													<a href="#">Các ca khúc pop ballad Việt nổi bật 2020</a>
+												</div>
+												<div class="artist"></div>
+											</div>
+										</div>
+  									</div>
+  									<div class="slide-item">
+  										<div class="col-album">
+											<a href="#">
+												<div class="card-image">
+													<div class="image">
+														<img src="./images/2ae04674e6ff4477d8d40ff06de6d8bf.jpg" alt="album" />
+													</div>
+													<div class="overlay"></div>
+													<div class="play-actions">
+														<ul>
+															<li><i class="far fa-heart"></i></li>
+															<li><i class="far fa-play-circle"></i></li>
+															<li><i class="fas fa-ellipsis-h"></i></li>
+														</ul>
+													</div>
+												</div>
+											</a>
+											<div class="card-info">
+												<div class="title">
+													<a href="#">Các ca khúc pop ballad Việt nổi bật 2020</a>
+												</div>
+												<div class="artist"></div>
+											</div>
+										</div>
+  									</div>
+  									<div class="slide-item">
+  										<div class="col-album">
+											<a href="#">
+												<div class="card-image">
+													<div class="image">
+														<img src="./images/248057f542641f7e06f22c0e61c534a4.jpg" alt="album" />
+													</div>
+													<div class="overlay"></div>
+													<div class="play-actions">
+														<ul>
+															<li><i class="far fa-heart"></i></li>
+															<li><i class="far fa-play-circle"></i></li>
+															<li><i class="fas fa-ellipsis-h"></i></li>
+														</ul>
+													</div>
+												</div>
+											</a>
+											<div class="card-info">
+												<div class="title">
+													<a href="#">Các ca khúc pop ballad Việt nổi bật 2020</a>
+												</div>
+												<div class="artist"></div>
+											</div>
+										</div>
+  									</div>											
+  								</div>
+  							</div>		
+						</div>					
+					</div>
+				</div>
+			</div>			
+		</section>
+		<section class="week-chart">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<div class="chart-realtime-wrapper">
+							<div class="chart-realtime">
+								<div class="realtime-header clearfix">
+									<div class="pull-left">
+										<a role="button" class="btn btn-zingchart " title="#zingchart" href="/zing-chart">#zingchart</a>
+										<span class="time-pick">13/11/2020 14:04</span>
+									</div>
+									<div class="pull-right">
+										<a class="btn btn-shadow radius-4 pull-right" data-action="play">
+											<i class="fas fa-play"></i> Nghe tất cả
+										</a>
+									</div>
+								</div>
+							</div>
+							<div class="realtime-list-song">
+								<div class="weekly-charts">
+								  	<div class="number">01</div>
+								  	<div class="card-image ">
+										<div class="image">
+											<img src="./images/1a3bd2b3c8e7669fb90d0ccd1a5def1c.jpg" alt="album" />
+										</div>
+										<div class="overlay"></div>
+										<div class="play-actions">
+											<i class="fas fa-play"></i>
+										</div>
+									</div>
+								  	<div class="info">
+								    	<div class="song-title">Duyên mình lỡ</div>
+								    	<div class="singer">Hương Tràm</div>
+								  	</div>
+								  	<div class="view-count">41%</div>
+								</div>
+								<div class="weekly-charts">
+								  	<div class="number">02</div>
+								  	<div class="card-image ">
+										<div class="image">
+											<img src="./images/5106e4259047de14e0d50ff01891dfe7.jpg" alt="album" />
+										</div>
+										<div class="overlay"></div>
+										<div class="play-actions">
+											<i class="fas fa-play"></i>
+										</div>
+									</div>
+								  	<div class="info">
+								    	<div class="song-title">Hoa hải đường</div>
+								    	<div class="singer">Jack</div>
+								  	</div>
+								  	<div class="view-count">31%</div>
+								</div>
+								<div class="weekly-charts">
+								  	<div class="number">03</div>
+								  	<div class="card-image ">
+										<div class="image">
+											<img src="./images/fc329ba9455f7e596aa24e798134bf18.jpg" alt="album" />
+										</div>
+										<div class="overlay"></div>
+										<div class="play-actions">
+											<i class="fas fa-play"></i>
+										</div>
+									</div>
+								  	<div class="info">
+								    	<div class="song-title">Thiên đàng</div>
+								    	<div class="singer">Wowy</div>
+								  	</div>
+								  	<div class="view-count">28%</div>
+								</div>
+								<div class="weekly-charts">
+								  	<div class="number">04</div>
+								  	<div class="card-image ">
+										<div class="image">
+											<img src="./images/1a3bd2b3c8e7669fb90d0ccd1a5def1c.jpg" alt="album" />
+										</div>
+										<div class="overlay"></div>
+										<div class="play-actions">
+											<i class="fas fa-play"></i>
+										</div>
+									</div>
+								  	<div class="info">
+								    	<div class="song-title">Duyên mình lỡ</div>
+								    	<div class="singer">Hương Tràm</div>
+								  	</div>
+								  	<div class="view-count"></div>
+								</div>
+								<div class="weekly-charts">
+								  	<div class="number">05</div>
+								  	<div class="card-image ">
+										<div class="image">
+											<img src="./images/1a3bd2b3c8e7669fb90d0ccd1a5def1c.jpg" alt="album" />
+										</div>
+										<div class="overlay"></div>
+										<div class="play-actions">
+											<i class="fas fa-play"></i>
+										</div>
+									</div>
+								  	<div class="info">
+								    	<div class="song-title">Duyên mình lỡ</div>
+								    	<div class="singer">Hương Tràm</div>
+								  	</div>
+								  	<div class="view-count"></div>
+								</div>
+								<div class="all-list">
+									<a href="#"><p>Xem tất cả</p></a>
+								</div>
+							</div>
+						</div>						
+					</div>
+				</div>
+			</div>			
+		</section>
+		<section class="artist">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<div class="slick-wrapper">
+							<div class="slick-1">
+								<div class="slide-item">
+									<div class="singer-choice">
+										<a href="#">
+										    <div class="col-album-circle">
+										      	<div class="card-image">
+										        	<div class="image">
+										          		<img src="../images/justatee.jpg" alt="album" />
+										        	</div>
+										        	<div class="overlay"></div>
+										        	<div class="play-actions">
+										          		<i class="fas fa-play"></i>
+										        	</div>
+										      	</div>
+										      	<div class="info">
+										        	<div class="spotlight-badge">
+										          		<i class="fas fa-star"></i>
+										          		<span>ZING CHOICE</span>
+										        	</div>
+										        	<div class="artist-singer">
+										          		<span>JustaTee</span> 
+										        	</div>       
+										      	</div> 
+										    </div>
+										</a>
+									</div>
+								</div>
+								<div class="slide-item">
+									<div class="singer-choice">
+										<a href="#">
+										    <div class="col-album-circle">
+										      	<div class="card-image">
+										        	<div class="image">
+										          		<img src="../images/min.jpg" alt="album" />
+										        	</div>
+										        	<div class="overlay"></div>
+										        	<div class="play-actions">
+										          		<i class="fas fa-play"></i>
+										        	</div>
+										      	</div>
+										      	<div class="info">
+										        	<div class="spotlight-badge">
+										          		<i class="fas fa-star"></i>
+										          		<span>ZING CHOICE</span>
+										        	</div>
+										        	<div class="artist-singer">
+										          		<span>Min</span> 
+										        	</div>       
+										      	</div> 
+										    </div>
+										</a>
+									</div>
+								</div>
+								<div class="slide-item">
+									<div class="singer-choice">
+										<a href="#">
+										    <div class="col-album-circle">
+										      	<div class="card-image">
+										        	<div class="image">
+										          		<img src="../images/chi-dan.jpg" alt="album" />
+										        	</div>
+										        	<div class="overlay"></div>
+										        	<div class="play-actions">
+										          		<i class="fas fa-play"></i>
+										        	</div>
+										      	</div>
+										      	<div class="info">
+										        	<div class="spotlight-badge">
+										          		<i class="fas fa-star"></i>
+										          		<span>ZING CHOICE</span>
+										        	</div>
+										        	<div class="artist-singer">
+										          		<span>Chi Dân</span> 
+										        	</div>       
+										      	</div> 
+										    </div>
+										</a>
+									</div>
+								</div>
+								<div class="slide-item">
+									<div class="singer-choice">
+										<a href="#">
+										    <div class="col-album-circle">
+										      	<div class="card-image">
+										        	<div class="image">
+										          		<img src="../images/onlyc.jpg" alt="album" />
+										        	</div>
+										        	<div class="overlay"></div>
+										        	<div class="play-actions">
+										          		<i class="fas fa-play"></i>
+										        	</div>
+										      	</div>
+										      	<div class="info">
+										        	<div class="spotlight-badge">
+										          		<i class="fas fa-star"></i>
+										          		<span>ZING CHOICE</span>
+										        	</div>
+										        	<div class="artist-singer">
+										          		<span>OnlyC</span> 
+										        	</div>       
+										      	</div> 
+										    </div>
+										</a>
+									</div>
+								</div>
+								<div class="slide-item">
+									<div class="singer-choice">
+										<a href="#">
+										    <div class="col-album-circle">
+										      	<div class="card-image">
+										        	<div class="image">
+										          		<img src="../images/soobin.jpg" alt="album" />
+										        	</div>
+										        	<div class="overlay"></div>
+										        	<div class="play-actions">
+										          		<i class="fas fa-play"></i>
+										        	</div>
+										      	</div>
+										      	<div class="info">
+										        	<div class="spotlight-badge">
+										          		<i class="fas fa-star"></i>
+										          		<span>ZING CHOICE</span>
+										        	</div>
+										        	<div class="artist-singer">
+										          		<span>Soobin Hoàng Sơn</span> 
+										        	</div>       
+										      	</div> 
+										    </div>
+										</a>
+									</div>
+								</div>
+								<div class="slide-item">
+									<div class="singer-choice">
+										<a href="#">
+										    <div class="col-album-circle">
+										      	<div class="card-image">
+										        	<div class="image">
+										          		<img src="../images/trinh-thang-binh.jpg" alt="album" />
+										        	</div>
+										        	<div class="overlay"></div>
+										        	<div class="play-actions">
+										          		<i class="fas fa-play"></i>
+										        	</div>
+										      	</div>
+										      	<div class="info">
+										        	<div class="spotlight-badge">
+										          		<i class="fas fa-star"></i>
+										          		<span>ZING CHOICE</span>
+										        	</div>
+										        	<div class="artist-singer">
+										          		<span>Trịnh Thăng Bình</span> 
+										        	</div>       
+										      	</div> 
+										    </div>
+										</a>
+									</div>
+								</div>
+								<div class="slide-item">
+									<div class="singer-choice">
+										<a href="#">
+										    <div class="col-album-circle">
+										      	<div class="card-image">
+										        	<div class="image">
+										          		<img src="../images/siro.jpg" alt="album" />
+										        	</div>
+										        	<div class="overlay"></div>
+										        	<div class="play-actions">
+										          		<i class="fas fa-play"></i>
+										        	</div>
+										      	</div>
+										      	<div class="info">
+										        	<div class="spotlight-badge">
+										          		<i class="fas fa-star"></i>
+										          		<span>ZING CHOICE</span>
+										        	</div>
+										        	<div class="artist-singer">
+										          		<span>Mr Siro</span> 
+										        	</div>       
+										      	</div> 
+										    </div>
+										</a>
+									</div>
+								</div>
+							</div>
+  						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 	</main>
 	<footer></footer>
 	<script type="text/javascript">
@@ -292,6 +814,16 @@
 			slidesToScroll: 5,
 			nextArrow: '<a class="slidersel-control-next" style="display: block;"><i class="fas fa-angle-right"></i></a>',
 		  	prevArrow: '<a class="slidersel-control-prev" style="display: block;"><i class="fas fa-angle-left"></i></a>',
+		});
+		$('.slick-1').slick({
+			rows: 1,
+			dots: false,
+			arrows: false,
+			infinite: true,
+			speed: 300,
+			autoplaySpeed: 3000,
+			slidesToShow: 3,
+			slidesToScroll: 1,
 		});
 	</script>
 </body>
